<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CadastroMedicamentoActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/rosaEscuro"
            android:textSize="30dp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginBottom="372dp"
            android:textAlignment="center"


            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.091"
            android:id="@+id/textTitulo"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/descricao_app"
              android:textAlignment="center"
              android:textSize="20dp"
              android:layout_gravity="center"
              app:layout_constraintTop_toBottomOf="@+id/textTitulo"
              tools:ignore="MissingConstraints"
              android:id="@+id/textDescricao" app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"/>


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorRosinha"
            android:layout_margin="24dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textDescricao"
            android:id="@+id/linearLayout" android:layout_marginTop="20dp">

        <ImageView
                android:id="@+id/imgmed"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:src="@drawable/ic_medicine"
        />

        <EditText
                android:id="@+id/edtNomeMedicamento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nome_medi"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textDescricao"

                app:layout_constraintHorizontal_bias="1.0"/>
        <EditText
                android:id="@+id/edtFreq"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/freq_medi"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textDescricao"/>

        <EditText
                android:id="@+id/edtHorario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/horario_medi"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textDescricao"/>

        <EditText
                android:id="@+id/edtDescricao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/descricao_medi"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textDescricao"/>


        <Button
                android:id="@+id/btnCadastrar2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/botao_cadastrar"
                android:background="@color/rosaEscuro"
                android:gravity="center"
                android:padding="8dp"
                android:layout_gravity="center"
                android:layout_margin="40dp"


                android:baselineAligned="false"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>